--- a/style/site.css
+++ b/style/site.css
@@ -18,10 +18,13 @@ h2 {
 }
 
 section.note {
-    background-color: #bfb;
+    background-color: #dfd;
     font-size: 0.8em;
-    border-radius: 1em;
-    padding: 1em;
+    padding: 0.3em 0 0.3em 0;
+}
+
+section.note div.inner-container {
+    margin: 1em;
 }
 
 p {
@@ -30,7 +33,12 @@ p {
 
 a:link {
     text-decoration: none;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.25);
     font-weight: 600;
+    color: #000;
+}
+
+a:visited {
     color: #000;
 }
 
