--- a/style/site.css
+++ b/style/site.css
@@ -46,3 +46,9 @@ a:hover {
     background: #0a0a0a;
     color: #fafafa;
 }
+
+footer {
+    margin-top: 4em;
+    font-size: 10pt;
+    color: #bbb;
+}
