--- a/style/site.css
+++ b/style/site.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 section.note {
-    background-color: #dfd;
+    background-color: #ffd;
     font-size: 0.8em;
     padding: 0.3em 0 0.3em 0;
 }
